# D-CIP

./: .dockerignore  .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  DEMO_GUIDE.md  LICENSE  Makefile  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/: README  env.py
apps/api/alembic/versions/: 0001_create_auth_tables.py  0002_create_case_tables.py  0003_create_evidence_tables.py  0004_create_ai_tables.py  0005_create_timeline_tables.py  0006_create_report_tables.py  0007_create_admin_tables.py  0008_create_watchlist_tables.py  0009_add_performance_indexes.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/core/: __init__.py  config.py  context.py  dependencies.py  exceptions.py  logging.py  middleware.py  rate_limit.py
apps/api/app/db/: __init__.py  base.py  neo4j_client.py  opensearch_client.py  redis_client.py  session.py
apps/api/app/models/: __init__.py  ai_chat_message.py  alert_notification.py  associations.py  auth_audit_event.py  case.py  case_activity.py  case_assignment.py  case_note.py  case_summary.py  case_task.py  evidence.py  evidence_custody.py  evidence_entity.py  evidence_keyword.py  evidence_summary.py  evidence_timeline_event.py  password_reset_token.py  permission.py  refresh_token.py  report.py  role.py  system_config.py  timeline_event.py  timeline_event_comment.py  user.py  user_session.py  watchlist.py  watchlist_alert.py
apps/api/app/repositories/: __init__.py  audit.py  base.py  case.py  evidence.py  password_reset.py  permission.py  refresh_token.py  role.py  timeline.py  user.py  user_session.py
apps/api/app/schemas/: __init__.py  admin.py  ai.py  audit.py  auth.py  base.py  case.py  dashboard.py  evidence.py  health.py  permission.py  report.py  role.py  search.py  session.py  timeline.py  user.py  version.py  watchlist.py
apps/api/app/services/: __init__.py  admin_service.py  ai_intelligence.py  ai_provider.py  alert_service.py  auth.py  base.py  case.py  dashboard_service.py  (+20 more)
apps/api/scripts/: seed_demo_data.py
apps/api/tests/: conftest.py  test_health.py  test_security.py  test_version.py
(+233 files in other folders)
