[project]
name = "dcip-api"
version = "0.1.0"
description = "D-CIP backend API (FastAPI, Python 3.13)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "email-validator>=2.2.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.3",
  "psycopg[binary]>=3.2.3",
  "redis>=5.1.1",
  "neo4j>=5.25.0",
  "opensearch-py>=2.7.1",
  "celery[redis]>=5.4.0",
  "pyjwt>=2.9.0",
  "bcrypt>=4.2.0",
  "slowapi>=0.1.9",
  "python-multipart>=0.0.12",
  # Milestone 5 — AI Intelligence Engine
  "Pillow>=10.4.0",
  "pytesseract>=0.3.13",
  "pypdf>=4.3.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
  "langdetect>=1.0.9",
  "openai>=1.56.0",
  "chardet>=5.2.0",
  "spacy>=3.7.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.2",
  "mypy>=1.11.2",
  "ruff>=0.6.9",
  "black>=24.10.0",
  "isort>=5.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# -----------------------------------------------------------------------------
# Tooling
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM", "RUF"]
ignore = ["B008"] # FastAPI uses callables in argument defaults (Depends).

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/worker/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
